<resources>
    <string name="app_name">SSFS Today</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lunch">Hello lunch fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="athletics">Hello athletics tab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="library_beestro">Library Beestro Tab</string>
    <string name="meeting">SSFS Meeting House</string>
    <string name="lunch_entree_label">Lunch Entree</string>
    <string name="vegetarian_label">Vegetarian Entree</string>
    <string name="soups_label">Souper Soups</string>
    <string name="sides_label">Sides</string>
    <string name="deli_label">Downtown Deli</string>
    <string name="today">Day of Week</string>
    <string name="library_hours">Library Hours</string>
    <string name="beestro_hours">Beestro Hours</string>
    <string name="announce">Beestro Announcements</string>
    <string name="lib_announce">Library Announcements</string>
    <string name="title_activity_lunch">Lunch</string>
    <string name="background">Tree Bark</string>
    <string name="schedule_title">Schedule Title Image</string>
    <string name="menu_title">Menu Title Image</string>
    <string name="athletics_title">Athletics Title Image</string>
    <string name="beestro_title">Library Beestro Title Image</string>
</resources>
