<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ssfs.ssfstoday.Lunch">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/meetinghouse"
        android:contentDescription="@string/meeting" />

    <RelativeLayout
        android:background="@drawable/text_background"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:layout_centerHorizontal="true"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/entree_label"
            android:layout_below="@id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunch_entree_label"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lunch_entree"
            android:layout_below="@id/entree_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp" />

        <TextView
            android:id="@+id/veggie_label"
            android:layout_below="@id/lunch_entree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian_label"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/veggie_entree"
            android:layout_below="@id/veggie_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp" />

        <TextView
            android:id="@+id/sides_label"
            android:layout_below="@id/veggie_entree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sides_label"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sides"
            android:layout_below="@id/sides_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp" />



        <TextView
            android:id="@+id/deli_label"
            android:layout_below="@id/sides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deli_label"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/deli"
            android:layout_below="@id/deli_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp" />

    </RelativeLayout>



</FrameLayout>
