<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LibraryBeestro">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/meetinghouse"
        android:contentDescription="@string/meeting" />

    <RelativeLayout
        android:background="@drawable/text_background"
        android:layout_width="250dp"
        android:layout_height="400dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/library_hours_label"
            android:layout_below="@id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_hours"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/library_hours_label"
            android:id="@+id/lib_hours"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/beest_hours_label"
            android:layout_below="@id/lib_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beestro_hours"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/beest_hours_label"
            android:id="@+id/beest_hours"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/announcements_label"
            android:layout_below="@id/beest_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/announce"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/announcements_label"
            android:id="@+id/announcements"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</FrameLayout>
