<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ssfs.ssfstoday.Schedule">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".4"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bark_1280x1920"
        android:contentDescription="@string/background" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="47dp"
            android:src="@drawable/schedule_title"
            android:contentDescription="@string/schedule_title"/>

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:background="@drawable/text_background">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:layout_centerHorizontal="true"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/date_label">

            <TextView
                android:id="@+id/schedule_view"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            </ScrollView>




        </RelativeLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/schedule_color"
            android:id="@+id/schedule_spinner">

        </Spinner>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
